resend for email

--- a/env.example
+++ b/env.example
@@ -12,13 +12,9 @@ OTP_EXPIRE_MINUTES=10
 OTP_LENGTH=6
 OTP_MAX_ATTEMPTS=3
 
-# Email Configuration (SMTP)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-SMTP_FROM_EMAIL=your-email@gmail.com
-SMTP_TLS=true
+# Email Configuration (Resend API)
+RESEND_API_KEY=re_your_resend_api_key_here
+RESEND_FROM_EMAIL=onboarding@resend.dev  # Default for testing, update after verifying your domain
 
 # Redis Configuration (Optional - for OTP caching)
 REDIS_URL=redis://localhost:6379/0
